# RAG-Anything

./: .gitignore  env.example  main.py  pipeline.py  pyproject.toml  query_mode.py  raganything_cli.py  setup.py
examples/: modalprocessors_example.py  raganything_example.py
raganything/: cross_modal_relationships.py  mineru_parser.py  modalprocessors.py  raganything.py
utils/: environment.py  model_invocation.py
